--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,6 +1,8 @@
 name: Django CI
 env:
   AWS_REGION: eu-west-1
+  ECR_REPOSITORY: reverseip
+  EKS_CLUSTER: reverseip-eks-cluster
 on:
   push:
     branches: [ "helm" ]
@@ -49,7 +51,7 @@ jobs:
            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
            -Dsonar.sources=$GITHUB_WORKSPACE
 
-  PUBLISH:
+  Publish:
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -60,7 +62,7 @@ jobs:
         uses: appleboy/docker-ecr-action@master
         with:
          access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-         secret_key: ${{ secrets. AWS_SECRET_ACCESS_KEY }}
+         secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
          registry: ${{ secrets.REGISTRY }}
          repo: reverseip
          region: ${{ env.AWS_REGION }}
@@ -68,5 +70,39 @@ jobs:
          daemon_off: false
          dockerfile: ./Dockerfile
          context: ./
-        
+
+  DeployToEKS:
+    needs: Publish
+    runs-on: ubuntu-latest
+    steps:
+    - name: Code checkout
+      uses: actions/checkout@v4
+      
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
                 
+    - name: Get Kube config file
+      run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
+      
+    - name: Print config file
+      run: cat ~/.kube/config
+            
+    - name: Login to ECR
+      run: kubectl create secret docker-registry regcred --docker-server=${{ secrets.REGISTRY }} --docker-username=AWS --docker-password=$(aws ecr get-login-password)
+      
+    - name: Deploy Helm
+      uses: bitovi/github-actions-deploy-eks-helm@v1.2.8
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+        cluster-name: ${{ env.EKS_CLUSTER }}
+        # config-files: .github/values/dev.yaml
+        chart-path: helm/reverseip-chart
+        namespace: default
+        values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=dev-latest,buildnumber=${{ github.run_number }}
+        name: reverseip-dev-release        
