--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -87,7 +87,8 @@ jobs:
     
     - name: Decrypt values.yaml
       run: |
-        sops --decrypt --pgp $(echo "${{ secrets.PGP_PRIVATE_KEY }}" | base64 -d) helm/reverseip-chart/values.enc.yaml > helm/reverseip-chart/values.yaml
+        cd helm/reverseip-chart   # Change to the directory
+        sops --decrypt --pgp "$(echo "${{ secrets.PGP_PRIVATE_KEY }}" | base64 -d)" values.enc.yaml > values.yaml
       env:
         SOPS_PGP_FP: ${{ secrets.PGP_FINGERPRINT }}
     
