--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -85,10 +85,14 @@ jobs:
         sudo dpkg -i sops_${SOPS_VERSION}_amd64.deb
         sops --version
     
+    - name: Import GPG Key
+      run: gpg --import helm/reverseip_chart/private_key.asc
+      # Replace 'path/to/your/private_key.asc' with the actual path to your private key file
+
     - name: Decrypt values.yaml
       run: |
         cd helm/reverseip-chart   # Change to the directory
-        sops --decrypt --pgp "$(echo "${{ secrets.PGP_PRIVATE_KEY }}" | base64 -d)" values.enc.yaml > values.yaml
+        sops --decrypt --pgp ${{ secrets.PGP_FINGERPRINT }} values.enc.yaml > values.yaml
       env:
         SOPS_PGP_FP: ${{ secrets.PGP_FINGERPRINT }}
     
