--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -92,9 +92,9 @@ jobs:
     - name: Decrypt values.yaml
       run: |
         cd helm/reverseip-chart   # Change to the directory
-        sops --decrypt --pgp ${{ secrets.PGP_FINGERPRINT }} values.enc.yaml > values.yaml
+        sops --decrypt --pgp D47B4C1306A0400A96DC599CC845EA1D47DF05FA   values.enc.yaml > values.yaml
       env:
-        SOPS_PGP_FP: ${{ secrets.PGP_FINGERPRINT }}
+        SOPS_PGP_FP: D47B4C1306A0400A96DC599CC845EA1D47DF05FA
     
       
     - name: Configure AWS credentials
