Adding Private Key

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -85,16 +85,16 @@ jobs:
         sudo dpkg -i sops_${SOPS_VERSION}_amd64.deb
         sops --version
     
-    # - name: Import GPG Key
-    #   run: gpg --import helm/reverseip-chart/private_key.asc
-    #   # Replace 'path/to/your/private_key.asc' with the actual path to your private key file
+    - name: Import GPG Key
+      run: gpg --import helm/reverseip-chart/private_key.asc
+      # Replace 'path/to/your/private_key.asc' with the actual path to your private key file
 
     - name: Decrypt values.yaml
       run: |
         cd helm/reverseip-chart   # Change to the directory
-        sops --decrypt --pgp D47B4C1306A0400A96DC599CC845EA1D47DF05FA   values.enc.yaml > values.yaml
+        sops --decrypt --pgp ${{ secrets.PGP_FINGERPRINT }} values.enc.yaml > values.yaml
       env:
-        SOPS_PGP_FP: D47B4C1306A0400A96DC599CC845EA1D47DF05FA
+        SOPS_PGP_FP: ${{ secrets.PGP_FINGERPRINT }}
     
       
     - name: Configure AWS credentials
